# excel_analysis

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  lint.ps1  main.ipynb  main.py  pyproject.toml
.github/workflows/: ci.yml
excel_analysis/: constants.py  data_check.py  final.py  helpers.py  stock_processing.py  store_data.py
excel_analysis/models/: neural_networks.py
excel_analysis/utils/: argument_parser.py  cargadores_de_datos.py  data_loaders.py  data_preprocessors.py  data_validation.py  display_results.py  entrenamiento.py  grading_system.py  mostrar_resultados.py  postprocesamiento.py  registro.py  sistema_de_calificaciones.py  validacion_de_datos.py
tests/: test_data_check.py
web/: astro.config.mjs  package.json  pnpm-lock.yaml
web/src/: consts.ts
web/src/components/: Footer.astro  Header.astro
web/src/components/react/: DynamicTable.jsx  StockTable.jsx
web/src/pages/: index.astro
