[tool.poetry]
name = "excel-analysis"
version = "0.8.0"
description = ""
authors = ["David Duran <dadch1404@gmail.com>"]
readme = "README.md"
packages = [{include = "excel_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
datareader = "^0.0.9"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.26"
scikit-learn = "^1.3.0"
openpyxl = "^3.1.2"
pytest = "^7.4.0"
pandas = "^2.0.3"
pylint = "^3.0.2"

[tool.poetry.scripts]
start = "excel_analysis.stock_processing:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
